--- a/templates/default/module/html/method_summary.erb
+++ b/templates/default/module/html/method_summary.erb
@@ -1,6 +1,6 @@
 <% if method_listing.size > 0 %>
   <% groups(method_listing) do |list, group| %>
-    <h2>
+    <h2 id="<%= anchor_for(group) %>">
       <%= group.to_s %>
       <small><a href="#" class="summary_toggle">collapse</a></small>
     </h2>
