re-enable search

--- a/templates/default/fulldoc/html/css/sidebar.css
+++ b/templates/default/fulldoc/html/css/sidebar.css
@@ -1,7 +1,7 @@
 .sidebar {
     font-size: 16px;
     background-color: #f7f7f7 !important;
-    width: 20rem;
+    width: 22rem;
     position: fixed;
     z-index: 15;
     margin: 0;
@@ -11,6 +11,7 @@
     box-sizing: border-box;
     border-right: 1px solid #eaecef;
     overflow-y: auto;
+    overflow-x: scroll;
 }
 
 @media (min-width: 860px) {
@@ -92,6 +93,7 @@ span.sidebar-link {
     line-height: 1.4;
     width: 100%;
     box-sizing: border-box;
+    white-space: nowrap;
 }
 
 span.sidebar-link a {
