--- a/templates/default/fulldoc/html/css/navbar.css
+++ b/templates/default/fulldoc/html/css/navbar.css
@@ -79,3 +79,100 @@
     font-weight: 400;
     font-size: 1rem;
 }
+
+.navbar .links .search-box {
+    flex: 0 0 auto;
+    vertical-align: top;
+}
+
+.search-box {
+    display: inline-block;
+    position: relative;
+    margin-right: 1rem;
+    min-width: 30rem;
+}
+
+.search-box input {
+    cursor: text;
+    width: 90%;
+    height: 2rem;
+    color: #4e6e8e;
+    display: inline-block;
+    border: 1px solid #cfd4db;
+    border-radius: 2rem;
+    font-size: .9rem;
+    line-height: 2rem;
+    padding: 0 .5rem 0 2rem;
+    outline: none;
+    transition: all .2s ease;
+    background: #fff url('data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHhtbG5z PSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgd2lkdGg9IjEyIiBoZWlnaHQ9 IjEzIj48ZyBzdHJva2Utd2lkdGg9IjIiIHN0cm9rZT0iI2FhYSIgZmlsbD0ibm9u ZSI+PHBhdGggZD0iTTExLjI5IDExLjcxbC00LTQiLz48Y2lyY2xlIGN4PSI1IiBj eT0iNSIgcj0iNCIvPjwvZz48L3N2Zz4K') .6rem .5rem no-repeat;
+    background-size: 1rem;
+}
+
+@media (min-width: 1024px) and (max-width: 1280px) {
+    .search-box input {
+        width: 5.7rem!important;
+    }
+}
+
+.search-results > ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.search-results {
+    box-sizing: border-box;
+    overflow-y: auto;
+    top: 100%;
+    right: 0;
+    background-color: #fff;
+    text-align: left;
+    white-space: nowrap;
+    margin: 0;
+    top: 0;
+    display: none;
+    padding: 0;
+}
+
+@media (min-width: 859px) {
+    .search-results {
+        height: auto!important;
+        box-sizing: border-box;
+        max-height: calc(100vh - 2.7rem);
+        overflow-y: auto;
+        top: 100%;
+        right: 0;
+        background-color: #fff;
+        border: 1px solid;
+        border-color: #ddd #ddd #ccc;
+        text-align: left;
+        border-radius: .25rem;
+        white-space: nowrap;
+        margin: 0;
+        line-height: 1.4rem;
+    }
+}
+
+.search-results li {
+    border-bottom: 1px solid;
+    border-color: #ccc;
+    padding-left: 10px;
+    padding-right: 10px;
+    display: none;    
+}
+
+.search-results li.found {
+    display: list-item;
+}
+
+.search-results li:hover {
+    background-color: #ddd ;
+}
+
+@media screen {
+    .search-results li small.search_info {
+        display: block;
+        padding: 0;
+    }
+}
