--- a/templates/default/layout/html/search.erb
+++ b/templates/default/layout/html/search.erb
@@ -1,3 +1,14 @@
-<form id="search" role="search">
-  <input class="search-query" spellcheck="false">
+<form class="search-box" role="search">
+  <input id="search-input" class="search-query ds-input" placeholder autocomplete="off" spellcheck="false" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-label="search input" style="position: relative, vertical-align: top;">
+  <div class="search-results" role="listbox">
+    <ul>
+      <%= erb(:search_class) %>
+    </ul>
+    <ul>
+      <%= erb(:search_method) %>
+    </ul>
+    <ul class="noresults">
+      <li>No Results</li>
+    </ul>
+  </div>
 </form>
