URLs include the repo name

--- a/templates/default/layout/html/versions.erb
+++ b/templates/default/layout/html/versions.erb
@@ -1,7 +1,7 @@
 <div class="page-versions">
   <ul class="version-switcher">
-    <li><a href="/5.0" class="version-button stable">Stable <small>(5.0)</small></a></li>
-    <li><a href="/main" class="version-button main">Latest <small>(main)</small></a></li>
+    <li><a href="/openhab-jrubyscripting/5.0" class="version-button stable">Stable <small>(5.0)</small></a></li>
+    <li><a href="/openhab-jrubyscripting/main" class="version-button main">Latest <small>(main)</small></a></li>
   </ul>
   <% archived_versions = %w[] %>
   <% unless archived_versions.empty? %>
