fix responsiveness of docs

--- a/templates/default/fulldoc/html/css/navbar.css
+++ b/templates/default/fulldoc/html/css/navbar.css
@@ -29,6 +29,18 @@
     }
 }
 
+@media (max-width: 859px) {
+    .navbar .links {
+        padding-left: 1.5rem;
+    }
+}
+
+@media (max-width: 859px) {
+    .navbar .can-hide {
+        display: none;
+    }
+}
+
 @media (prefers-color-scheme: light) {
     .navbar:not(.headroom--top):not(.transparent) {
         background-color: rgba(250,250,252,.9)!important;
@@ -89,7 +101,7 @@
     display: inline-block;
     position: relative;
     margin-right: 1rem;
-    min-width: 30rem;
+    min-width: 20rem;
 }
 
 .search-box input {
@@ -112,6 +124,12 @@
 @media (min-width: 1024px) and (max-width: 1280px) {
     .search-box input {
         width: 5.7rem!important;
+    }
+}
+
+@media (max-width: 859px) {
+    .search-box {
+        margin-right: 0;
     }
 }
 
