--- a/templates/default/layout/html/layout.erb
+++ b/templates/default/layout/html/layout.erb
@@ -7,7 +7,7 @@
     <div id="app">
       <header class="navbar">
         <a href="<%= url_for_main %>">
-          <img src="<%= url_for_file("docs/images/openhab-logo.png") %>" alt="openHAB" class="logo">
+          <img src="<%= url_for_file("docs/images/openhab-logo.png") %>" alt="openHAB" class="logo can-hide">
           <img src="<%= url_for_file("docs/images/jrubyscripting.png") %>" alt="openHAB" class="logo">
           <span class="site-name can-hide">openHAB</span>
         </a>
