--- a/templates/default/fulldoc/html/css/common.css
+++ b/templates/default/fulldoc/html/css/common.css
@@ -58,6 +58,12 @@ h1:hover .header-anchor, h2:hover .header-anchor, h3:hover .header-anchor, h4:ho
     display: block;
 }
 
+@media (max-width: 859px) {
+    .page {
+        padding-left: 0;
+    }
+}
+
 .content {
     min-height: 85vh !important;
     max-width: 1280px !important;
@@ -65,12 +71,11 @@ h1:hover .header-anchor, h2:hover .header-anchor, h3:hover .header-anchor, h4:ho
     padding: 2rem 3rem;
 }
 
-@media (max-width: 1580px) {
+@media (max-width: 1023px) {
     .content {
-        max-width: 820px !important;
+        padding: 2rem;
     }
 }
-
 .content a:hover {
     text-decoration: underline;
 }
