--- a/templates/default/fulldoc/html/css/sidebar.css
+++ b/templates/default/fulldoc/html/css/sidebar.css
@@ -20,6 +20,22 @@
     }
 }
 
+@media (max-width: 859px) {
+    .sidebar {
+        top: 0;
+        padding-top: 3.6rem;
+        transform: translateX(-100%);
+        transition: transform .2s ease;
+    }
+}
+
+@media (max-width: 1023px) {
+    .sidebar {
+        font-size: 15px;
+        width: 16.4rem;
+    }
+}
+
 .sidebar-mask {
     z-index: 9;
     width: 100vw;
