use a JSON search index
rather than generating the entire HTML of the full search index onto
every page.

--- a/templates/default/layout/html/footer.erb
+++ b/templates/default/layout/html/footer.erb
@@ -3,3 +3,4 @@
   <a href="https://yardoc.org" title="Yay! A Ruby Documentation Tool" target="_parent">yard</a>
   <%= YARD::VERSION %> (ruby-<%= RUBY_VERSION %>).
 </footer>
+<script id="index" type="application/json" href="<%= url_for_search_index %>">
