--- a/templates/default/layout/html/layout.erb
+++ b/templates/default/layout/html/layout.erb
@@ -10,6 +10,11 @@
   <body>
     <div id="app">
       <header class="navbar">
+        <div class="sidebar-button">
+          <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon">
+            <path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path>
+          </svg>
+        </div>
         <a href="<%= url_for_main %>">
           <img src="<%= url_for_file("docs/images/openhab-logo.png") %>" alt="openHAB" class="logo can-hide">
           <img src="<%= url_for_file("docs/images/jrubyscripting.png") %>" alt="openHAB" class="logo">
@@ -18,16 +23,16 @@
         <div class="links">
           <%= erb(:search) %>
           <nav class="nav-links can-hide">
-            <div class="nav-item">
-              <a href="https://github.com/ccutrer/openhab-jrubyscripting" target="_blank" rel="noopener noreferrer" class="nav-link external">GitHub
-              <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a>
-            </div>
+            <%= erb(:nav_links) %>
           </nav>
         </div>
       </header>
 
       <div class="sidebar-mask"></div>
       <aside class="sidebar">
+        <nav class="nav-links">
+          <%= erb(:nav_links) %>
+        </nav>
         <%= erb(:versions) %>
         <% file_open = defined?(@file) && @file %>
         <ul class="sidebar-links">
