some dark mode improvements
not complete - there's some styling coming from YARD that still needs tinkering

as well as a few sidebar elements I haven't had time to find the styling for
from the openhab docs website

--- a/templates/default/fulldoc/html/css/common.css
+++ b/templates/default/fulldoc/html/css/common.css
@@ -13,6 +13,13 @@ body {
     overflow: auto;
 }
 
+@media (prefers-color-scheme: dark) {
+    body, html {
+        background-color: #111;
+        color: #ddd;
+    }
+}
+
 h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
     line-height: 1.25;
