--- a/templates/default/fulldoc/html/css/sidebar.css
+++ b/templates/default/fulldoc/html/css/sidebar.css
@@ -40,6 +40,17 @@
     }
 }
 
+@media (prefers-color-scheme: dark) {
+    .sidebar {
+        background-color: #000!important;
+        border-right: 1px solid #444!important;
+    }
+
+    .sidebar .sidebar-heading, .sidebar .sidebar-link {
+        color: #a6a6a6;
+    }
+}
+
 .sidebar-mask {
     z-index: 9;
     width: 100vw;
@@ -58,11 +69,6 @@
     box-sizing: border-box;
     margin: 0;
     border-left: .25rem solid transparent;
-}
-
-.sidebar a {
-    display: inline-block;
-    color: #2c3e50;
 }
 
 .sidebar ul {
@@ -109,6 +115,7 @@ span.sidebar-link {
     font-size: 1em;
     font-weight: 400;
     display: inline-block;
+    color: #2c3e50;
     border-left: .25rem solid transparent;
     padding: .35rem 1rem .35rem 1.25rem;
     line-height: 1.4;
