--- a/templates/default/fulldoc/html/css/navbar.css
+++ b/templates/default/fulldoc/html/css/navbar.css
@@ -69,6 +69,23 @@
     }
 }
 
+@media (prefers-color-scheme: dark) {
+    .navbar {
+        background-color: rgba(0,0,0,.9)!important;
+        border-bottom: 1px solid #444;
+    }
+
+    .navbar .logo {
+        filter: invert(1) grayscale(1) brightness(100);
+    }
+
+    .navbar .search-box input {
+        border-color: #444!important;
+        background: #333 url('data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHhtbG5z PSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgd2lkdGg9IjEyIiBoZWlnaHQ9 IjEzIj48ZyBzdHJva2Utd2lkdGg9IjIiIHN0cm9rZT0iI2FhYSIgZmlsbD0ibm9u ZSI+PHBhdGggZD0iTTExLjI5IDExLjcxbC00LTQiLz48Y2lyY2xlIGN4PSI1IiBj eT0iNSIgcj0iNCIvPjwvZz48L3N2Zz4K') .6rem .5rem no-repeat!important;
+        color: #ddd;
+    }
+}
+
 .navbar:not(.headroom--top):not(.transparent) {
     box-shadow: 0 0 10px rgba(26,26,26,.25);
 }
